# zapret-gui

./: .gitignore  CMakeLists.txt  README.md
platform/android/: AndroidManifest.xml
platform/android/jni/: tcp_relay.c  tcp_relay.h  udp_relay.c  udp_relay.h  vpn_processor.c
platform/android/src/com/zapretgui/: ZapretVpnService.java
platform/ios/: Info.plist
platform/ios/ZapretPacketTunnel/: DPIBypassBridge.h  PacketProcessor.swift  PacketTunnelProvider.swift  TCPRelay.swift  UDPRelay.swift
platform/linux/: com.zapretgui.policy
platform/macos/: Info.plist
platform/macos/com.zapretgui.helper/: launchd.plist
platform/windows/: zapret-gui.manifest
qml/: Main.qml
qml/components/: NavigationBar.qml  StatusIndicator.qml  StrategyCard.qml
qml/pages/: DiagnosticsPage.qml  HomePage.qml  ListsPage.qml  LogPage.qml  SettingsPage.qml  StrategiesPage.qml
resources/: strategies.json
src/: main.cpp
src/core/: ConfigManager.cpp  ConfigManager.h  HostlistManager.cpp  HostlistManager.h  ProcessManager.cpp  ProcessManager.h  StrategyManager.cpp  StrategyManager.h  UpdateChecker.cpp  UpdateChecker.h  ZapretEngine.cpp  ZapretEngine.h
src/dpi/: dpi_bypass.c  dpi_bypass.h
src/models/: LogModel.cpp  LogModel.h  StrategyListModel.cpp  StrategyListModel.h
src/platform/: AndroidPlatform.cpp  AndroidPlatform.h  IOSPlatform.cpp  IOSPlatform.h  LinuxPlatform.cpp  LinuxPlatform.h  MacOSPlatform.cpp  MacOSPlatform.h  PlatformHelper.cpp  PlatformHelper.h  WindowsPlatform.cpp  WindowsPlatform.h
tools/udp-bypass/: CMakeLists.txt  udp-bypass.c
